[angular] fix card text overflow bug, items flex problem, add header hover and click style

--- a/client/src/app/component/card/card.component.scss
+++ b/client/src/app/component/card/card.component.scss
@@ -60,7 +60,7 @@
   }
 
   &-title {
-    width: calc(17rem - 0.8rem * 2);
+    width: calc(17rem - 0.6rem * 2);
     @extend %wordNotOverflow;
   }
 
