--- a/client/src/app/view/items/items.component.scss
+++ b/client/src/app/view/items/items.component.scss
@@ -7,4 +7,9 @@
 .cards {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+
+  @include respond(desktop) {
+    justify-content: start;
+  }
 }
