--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -116,7 +116,7 @@ html {
     font-size: 87.5%; /* 14 / 16 = 87.5%  1rem = 14px */
   }
   @include respond(desktop) {
-    font-size: 75%; /* 12 / 16 = 75%  1rem = 12px */
+    font-size: 80%; /* 12 / 16 = 75%  1rem = 12px */
   }
   @include respond(big-desktop) {
     font-size: 100%; /* 16 / 16 = 100%  1rem = 16px */
